--- a/mygelb/scss/app.scss
+++ b/mygelb/scss/app.scss
@@ -1,4 +1,6 @@
-﻿@import "foundation.scss";
+﻿@import 'settings';
+@import "../node_modules/foundation-sites/scss/foundation";
+@include foundation-everything;
 
 @import 'global';
 @import 'homepage';
