Building starter template. Installed package smartBlog to enable blog module. Added JS plugins to gulp, Sass partials for plugins, and configuring Umbraco layout

--- a/mygelb/Views/Portfolio.cshtml
+++ b/mygelb/Views/Portfolio.cshtml
@@ -1,7 +1,5 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<ContentModels.Homepage>
+﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<ContentModels.Portfolio>
 @using ContentModels = Umbraco.Web.PublishedContentModels;
 @{
 	Layout = "_Layout.cshtml";
 }
-
-<h1>Test</h1>
