--- a/mygelb/scss/_global.scss
+++ b/mygelb/scss/_global.scss
@@ -1,4 +1,14 @@
+@include inline-block-lr('.header-container', '#desktop-menu', '.logo');
+
+body {
+    height: 1200px;
+}
+
 header {
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    width: 100%;
 
     @include breakpoint(medium) {
         background: rgba(253, 250, 246, .65);
@@ -6,18 +16,12 @@ header {
         height: 73px;
     }
 
-    #nav-toggle {
-        @include hamburger;
-        @include breakpoint(medium) {
-            display: none;
-        }
-    }
-
     #desktop-menu {
         display: none;
     
         @include breakpoint(medium) {
-            display: block;
+           display: inline-block;
+           vertical-align: top;
 
             ul {
                 padding: 0;
@@ -32,5 +36,15 @@ header {
             }
         }
     }
+    
+    #nav-toggle {
+        @include hamburger;
+        @include breakpoint(medium) {
+            display: none;
+        }
+    }
+}
 
+main {
+    margin-top: 180px;
 }
