--- a/mygelb/Views/SmartBlogRSS.cshtml
+++ b/mygelb/Views/SmartBlogRSS.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @{
-    Layout = null;
+    Layout = "_Layout.cshtml";
     
     @Html.Partial("SmartRSS")
 }
