--- a/mygelb/Views/Homepage.cshtml
+++ b/mygelb/Views/Homepage.cshtml
@@ -4,4 +4,8 @@
 	Layout = "_Layout.cshtml";
 }
 
-<h1>Test</h1>
+<div class="row">
+    <div class="small-12 columns">
+        <h1>Test</h1>
+    </div>
+</div>
