Added Font Awesome. Updated Gulp with alert. Added mmenu and slickjs to package.json. Added _fonts.scss

--- a/mygelb/Views/Partials/header.cshtml
+++ b/mygelb/Views/Partials/header.cshtml
@@ -4,11 +4,14 @@
     <div class="row">
         <div class="small-12 columns">
             <a id="nav-toggle" href="#menu-mobile"><span></span></a>
+
+
             <div class="header-container">
                 <a href="/" class="logo">
                     <img src="/media/1001/logo.png" />
                 </a>
-                <nav id="menu-mobile">
+
+                <div id="menu-mobile">
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/About/">About</a></li>
@@ -16,7 +19,7 @@
                         <li><a href="/Blog/">Blog</a></li>
                         <li><a href="/Contact/">Contact</a></li>
                     </ul>
-                </nav>
+                </div>
 
                 <nav id="desktop-menu">
                     <ul>
