--- a/mygelb/scss/app.scss
+++ b/mygelb/scss/app.scss
@@ -1,13 +1,14 @@
-﻿@import 'settings';
-@import "../node_modules/foundation-sites/scss/foundation";
+﻿/* Foundation */
+@import 'settings';
+@import 'foundation';
 @include foundation-everything;
 
-@import 'slick';
-@import 'slick-theme';
+/* Font Awesome */
+@import 'font-awesome';
 
+/* Custom */
+@import 'fonts';
 @import 'mixins';
-
 @import 'global';
 @import 'homepage';
-
 @import 'blog';
