--- a/mygelb/scss/_blog.scss
+++ b/mygelb/scss/_blog.scss
@@ -6,8 +6,8 @@ form {display: inline;}
 article, aside, figure, footer, header, hgroup, nav, section { display: block; margin: 0; padding: 0; }
 
 /* Template settings */
-.banner {float: left; width: 900px; height: 100px; margin: 0; padding: 0; font-size: 25pt; line-height: 100px;}
-.content {float: left; width: 900px; margin: 0 0 10px 0; padding: 0; background-color: #fff;}
+/*.banner {float: left; width: 900px; height: 100px; margin: 0; padding: 0; font-size: 25pt; line-height: 100px;}
+.content {float: left; width: 900px; margin: 0 0 10px 0; padding: 0; background-color: #fff;}*/
 .payload {float: left; width: 870px; margin: 15px; padding: 0; vertical-align: top;}
 .smartBlogLeft {float: left; width: 78%;}
 .smartBlogRight {float: right; width: 20%;}
