Added body classes to pages. Added non-nuget packages. Must add .dll from Umbraco Packages to bin after cloning repo

--- a/mygelb/Views/About.cshtml
+++ b/mygelb/Views/About.cshtml
@@ -1,5 +1,7 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<ContentModels.About>
 @using ContentModels = Umbraco.Web.PublishedContentModels;
 @{
-	Layout = "_Layout.cshtml";
+    Layout = "_Layout.cshtml";
+
+    @section BodyClass {subpage-about}
 }
