--- a/mygelb/Views/Contact.cshtml
+++ b/mygelb/Views/Contact.cshtml
@@ -2,4 +2,6 @@
 @using ContentModels = Umbraco.Web.PublishedContentModels;
 @{
     Layout = "_Layout.cshtml";
+
+    @section BodyClass {subpage-contact}
 }
