--- a/mygelb/Views/Homepage.cshtml
+++ b/mygelb/Views/Homepage.cshtml
@@ -1,7 +1,9 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<ContentModels.Homepage>
 @using ContentModels = Umbraco.Web.PublishedContentModels;
 @{
-	Layout = "_Layout.cshtml";
+    Layout = "_Layout.cshtml";
+
+    @section BodyClass {subpage-homepage}
 }
 
 <div class="row">
