--- a/mygelb/Views/Portfolio.cshtml
+++ b/mygelb/Views/Portfolio.cshtml
@@ -1,5 +1,7 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<ContentModels.Portfolio>
 @using ContentModels = Umbraco.Web.PublishedContentModels;
 @{
-	Layout = "_Layout.cshtml";
+    Layout = "_Layout.cshtml";
+
+    @section BodyClass {subpage-portfolio}
 }
