1. Added github link and moved resume location from /contact/ to /about/ 2. Changed content

--- a/mygelb/Views/Partials/Footer.cshtml
+++ b/mygelb/Views/Partials/Footer.cshtml
@@ -28,7 +28,7 @@
             <div class="footer-contact">
                 <ul>
                     <li><a href="https://www.facebook.com/MygelBergstresser" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://twitter.com/Mygelberg" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/legym" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="mailto:MygelBergstresser@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/mygel-bergstresser-1b83baa3
 " target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
