--- a/mygelb/Views/About.cshtml
+++ b/mygelb/Views/About.cshtml
@@ -58,18 +58,15 @@
         <div class="small-12 medium-12 large-6 end columns">
             <h6>History</h6>
             <p>
-                Mygel's passion for backpacking started when he left rural life in North Carolina and travel to Seattle in order to pursue his dreams of making websites have a better User Experience. During the two week drive across the country, it became evident that the nomadic life was the calling he had been missing.
+                Mygel's passion for backpacking started when he left rural life in North Carolina and travel to Seattle in order to pursue his dreams of creating websites and applications. During the two week drive across the country, it became evident that the nomadic life was the calling he had been missing.
             </p>
 
             <h6>Experience</h6>
             <p>
-                During college, Mygel became interested in web development after slowly burning out fixing electronics for his local community. The ability to create and innovate ideas instead of maintaining machines is a mindset he had always wanted. Over the course of a year he would spend time after work and self-taught himself development by reading books, articles, and subscribing to online classes. A year later he moved to Seattle and was hired on to one of the largest award winning web agencies on the west coast shortly after he had arrived.
+                During college, Mygel became interested in web development after fixing electronics for the past 5 years for his local community. The ability to create and innovate ideas instead of maintaining machines is a mindset he had always wanted. Being self-taught and motivated he learn to program by reading books, articles, and subscribing to online classes. A year later he moved to Seattle and was hired on to one of the largest award winning web agencies on the west coast shortly after he had arrived.
             </p>
-
-            <h6>Currently</h6>
-            <p>
-                Currently he is now backpacking from Alaska to the Baja Peninsula in Mexico. Working Monday through Friday and traveling on the weekends, he gets to fulfill his wanderlust while collaborating with others to build applications that push the boundaries of web devlopment. You can find him coding away at Starbucks or AirBnb throughout the weekday and adventuring on the weekends. 
-            </p>
+            <a class="btn btn-resume" href="~/media/Mygel-Bergstresser-resume.pdf" target="_blank">Download Resume</a>
+            <a class="btn btn-resume" href="https://github.com/legym" target="_blank">Github</a>
         </div>
     </div>
 </section>
